# pywebnn

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CLAUDE.md  docs.yml  lint.yml  publish.yml  test.yml
docs/: CLAUDE.md  advanced.md  api-reference.md  examples.md  getting-started.md  index.md
examples/: CLAUDE.md  compare_minilm_onnx.py  dispatch_example.py  image_classification.py  minilm_embeddings.py  mobilenetv2_complete.py  mobilenetv2_from_hub.py  mobilenetv2_real.py  python_matmul.py  python_simple.py  smollm_from_hub.py  text_generation_enhanced.py  text_generation_gpt.py  train_simple_demo.py
python/webnn/: CLAUDE.md  __init__.py  __init__.pyi  hub.py
src/: CLAUDE.md  lib.rs
src/python/: CLAUDE.md  context.rs  graph.rs  graph_builder.rs  mod.rs  operand.rs  tensor.rs
tests/: CLAUDE.md  conftest.py  test_integration.py  test_performance.py  test_python_api.py  test_wpt_conformance.py  wpt_utils.py
tests/wpt_data/conformance/: abs.json  add.json  batch_normalization.json  cast.json  ceil.json  clamp.json  concat.json  conv2d.json  conv_transpose2d.json  div.json  elu.json  equal.json  exp.json  expand.json  floor.json  gather.json  greater.json  greater_or_equal.json  hard_sigmoid.json  hard_swish.json  instance_normalization.json  layer_normalization.json  leaky_relu.json  lesser.json  lesser_or_equal.json  linear.json  log.json  logical_not.json  matmul.json  max.json  min.json  mul.json  neg.json  pow.json  reduce_l1.json  reduce_l2.json  reduce_log_sum.json  reduce_log_sum_exp.json  reduce_max.json  reduce_mean.json  (+14 more)
tools/: resolve_ort_dylib.py
